--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a57a1ded99bc153ce08aec70dc871d23",
+    "/css/app.css": "/css/app.css?id=7cd207a9c4e704fe5534532d61f0a4d0"
 }
